package org.africa.semicolon.mylibrary.data.models;

public enum Role {
    ADMIN,
    USER,
    LIBRARIAN
}
